# trial_project

trial_project/: README.md  pyproject.toml  requirements.txt  tasks.py
trial_project/dockerfiles/: api.dockerfile  train.dockerfile
trial_project/docs/: mkdocs.yaml
trial_project/docs/source/: index.md
trial_project/tests/: test_data.py
