[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trial_project"
version = "0.0.1"
authors = [
  { name = "Viktor Nysøe", email = "viktornysoe@hotmail.dk" },
]
description = "made to test all methods learned in my course"
requires-python = ">=3.11"
dynamic = ["dependencies"]
readme = "README.md"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
